--- a/views/partials/navmenu.hbs
+++ b/views/partials/navmenu.hbs
@@ -12,6 +12,7 @@
       <a href='/audios/list' class='nav-link' title="Audio Management"><i class="fas fa-music"></i></a>
       <a href='/videos/list' class='nav-link special' title="Video Management"><i class="fas fa-film"></i></a>
       <a href='/videos/create' class='nav-link special' title="Create Video"><i class="fas fa-video"></i></a>
+      <a href='/settings' class='nav-link' title="Settings"><i class="fas fa-cog"></i></a>
     </div>
   </div>
 </nav>
