--- a/views/partials/navmenu.hbs
+++ b/views/partials/navmenu.hbs
@@ -7,6 +7,7 @@
     </div>
     <div class="right-section">
       <a href='/' class='nav-link' title="Home"><i class="fas fa-home"></i></a>
+      <a href='/videos/calendar' class='nav-link' title="Calendar"><i class="fas fa-calendar"></i></a>
       {{!-- <a href='/upload' class='nav-link' title="Upload Videos"><i class="fas fa-upload"></i></a> --}}
       <a href='/images/list' class='nav-link' title="Image Management"><i class="fas fa-images"></i></a>
       <a href='/audios/list' class='nav-link' title="Audio Management"><i class="fas fa-music"></i></a>
