--- a/views/ai-video-generation/video-list.hbs
+++ b/views/ai-video-generation/video-list.hbs
@@ -307,6 +307,10 @@
             <option value="basic" {{#if (eq currentTypeFilter 'basic' )}}selected{{/if}}>Basic</option>
             <option value="structured" {{#if (eq currentTypeFilter 'structured' )}}selected{{/if}}>Structured</option>
             <option value="real" {{#if (eq currentTypeFilter 'real' )}}selected{{/if}}>Real</option>
+            <option value="hidden_beasts" {{#if (eq currentTypeFilter 'hidden_beasts' )}}selected{{/if}}>Hidden Beasts
+            </option>
+            <option value="hidden_files" {{#if (eq currentTypeFilter 'hidden_files' )}}selected{{/if}}>Hidden Files
+            </option>
           </select>
         </div>
         <div class="form-group">
